plugins {
	id 'java'
	id 'java-library'
}

group = 'nl.rrd'
version = '6.0.8'

base {
	archivesName = 'senseeact-service'
}

java {
	sourceCompatibility = JavaVersion.VERSION_17
	targetCompatibility = JavaVersion.VERSION_17
}

dependencies {
	api project(':SenSeeActServiceLib')
	api 'com.google.zxing:core:3.5.3'
	api 'com.google.zxing:javase:3.5.3'
}

tasks.withType(JavaCompile) {
	options.deprecation = true
}

test {
	testLogging.showStandardStreams = true
}

javadoc {
	options {
		links 'https://docs.oracle.com/en/java/javase/17/docs/api/'
		addBooleanOption('Xdoclint:all,-missing,-html', true)
	}
}
